--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ a {
    color: #092032;
    text-decoration: none;
    transition: all 0.4s ease;
+   font-weight: 500 !important;
 }
 
 img {
@@ -60,4 +61,14 @@ img {
 
 .navbar {
     box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
+}
+
+.navbar-brand {
+    font-weight: 700;
+    font-size: 26px;
+    color: #092032;
+}
+
+.navbar-brand span {
+    color: #ff4d29;
 }
