add update on slider section

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ img {
     width: 100%;
 }
 
+.bg-cover {
+    background-position: center !important;
+    background-size: cover !important;
+    background-position: center !important;
+}
+
 /* NAVBAR */
 
 .top-nav {
