--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,6 @@ img {
 
 /* SLIDER */
 .slide1{
-    background-image: url(../img/bg_banner1.jpg);
+    background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner1.jpg);
 }
 
