add overlay on slider section

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,7 @@ img {
     background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner1.jpg);
 }
 
+.slide2{
+    background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner2.jpg);
+}
+
