--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,8 @@ img {
     background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner2.jpg);
 }
 
+/* OWL CAROUSEL */
+.owl-prev,
+.owl-next {
+
+}
