--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,132 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&family=Nunito:wght@200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 
-body{
-    font-family: "Barlow", sans-serif ;
-    line-height: 1.7;
-    color: #516171 ;
-    
+body {
+  font-family: "Barlow", sans-serif;
+  line-height: 1.7;
+  color: #516171;
 }
 
-h1,h2,h3,h4,h5,h6{
-    font-weight: 700 !important;
-     color: #092032;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700 !important;
+  color: #092032;
 }
 
 a {
-   color: #092032;
-   text-decoration: none;
-   transition: all 0.4s ease;
-   font-weight: 500 !important;
+  color: #092032;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  font-weight: 500 !important;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
 .bg-cover {
-    background-position: center !important;
-    background-size: cover !important;
-    background-position: center !important;
+  background-position: center !important;
+  background-size: cover !important;
+  background-position: center !important;
 }
 
 /* NAVBAR */
 
 .top-nav {
-    background-color: #ff4d29; 
-    padding: 10px 0px;
+  background-color: #ff4d29;
+  padding: 10px 0px;
 }
 
 .top-nav p {
-    margin-bottom: 0;
-    display: inline-block;
-    margin-right: 16px;
-    color: white;
+  margin-bottom: 0;
+  display: inline-block;
+  margin-right: 16px;
+  color: white;
 }
 
 .top-nav i,
 .top-nav span {
-   vertical-align: middle;
- }
+  vertical-align: middle;
+}
 
 .social-links a {
-     width: 34px;
-     height: 34px;
-     background-color: rgba(255, 255, 255, 0.3);
-     display: inline-flex;
-     align-items: center;
-     justify-content: center;    
-     color: #fff;
-     font-size: 20px;
-     border-radius: 100%;
+  width: 34px;
+  height: 34px;
+  background-color: rgba(255, 255, 255, 0.3);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 20px;
+  border-radius: 100%;
 }
 
 .social-links a:hover {
-    background-color: #fff;
-    color: #ff4d29;
+  background-color: #fff;
+  color: #ff4d29;
 }
 
 .navbar .navbar-nav .nav-link:hover,
-.navbar .navbar-nav .nav-link.active
-{
+.navbar .navbar-nav .nav-link.active {
   color: #ff4d29;
 }
 
 .navbar {
-    box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
 }
 
 .navbar-brand {
-    font-weight: 700;
-    font-size: 26px;
-    color: #092032;
+  font-weight: 700;
+  font-size: 26px;
+  color: #092032;
 }
 
 .navbar-brand span {
-    color: #ff4d29;    
+  color: #ff4d29;
 }
 
 /* BTN */
 
 .btn {
-    padding: 9px 24px; 
-    font-weight: 500 !important;    
+  padding: 9px 24px;
+  font-weight: 500 !important;
 }
 
 .btn-brand {
-    background-color: #ff4d29;
-    color: #fff;
-    border-color: #ff4d29 ;
+  background-color: #ff4d29;
+  color: #fff;
+  border-color: #ff4d29;
 }
 
 .btn-brand:hover {
-    background-color: #c83417;
-    color: #fff;
+  background-color: #c83417;
+  color: #fff;
 }
 
 /* SLIDER */
-.slide1{
-    background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner1.jpg);
+.slide1 {
+  background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)),
+    url(../img/bg_banner1.jpg);
 }
 
-.slide2{
-    background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)), url(../img/bg_banner2.jpg);
+.slide2 {
+  background: linear-gradient(rgba(9, 32, 50, 0.4), rgba(9, 32, 50, 0.4)),
+    url(../img/bg_banner2.jpg);
 }
 
 /* OWL CAROUSEL */
 .owl-prev,
 .owl-next {
-
+  position: absolute;
+  top: 50%;
+  width: 60px !important;
+  height: 60px !important;
+  display: grid;
+  place-items: center;
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  font-size: 32px !important;
+ 
 }
