--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,16 @@ img {
   display: grid;
   place-items: center;
   background-color: rgba(255, 255, 255, 0.2) !important;
-  font-size: 32px !important;
- 
+  font-size: 18px !important;
+  font-weight: 700 !important;
+  margin-top: -30px !important;
+  color: #fff !important;
+}
+
+.owl-prev {
+  left: 0;
+}
+
+.owl-next {
+  right: 0;
 }
