--- a/css/style.css
+++ b/css/style.css
@@ -127,10 +127,11 @@ img {
   display: grid;
   place-items: center;
   background-color: rgba(255, 255, 255, 0.2) !important;
-  font-size: 18px !important;
+  font-size: 13px !important;
   font-weight: 700 !important;
   margin-top: -30px !important;
   color: #fff !important;
+  border-radius: 100px !important;
 }
 
 .owl-prev {
@@ -139,4 +140,9 @@ img {
 
 .owl-next {
   right: 0;
+}
+
+.owl-prev:hover,
+.owl-next:hover {
+   background-color: #ff4d29 !important;
 }
