--- a/css/style.css
+++ b/css/style.css
@@ -212,3 +212,17 @@ section {
     margin-bottom: 12px;
     
   }
+
+  /* PROJECT */
+  .project {
+    position: relative;
+  }
+
+  .project .overlay {
+    background: linear-gradient(to bottom, rgba(9, 32, 50, 0.0),rgba(9, 32, 50, 0.8));
+    position: absolute;
+    width: 100%;
+    height: 240px;
+    bottom: 0;
+    left: 0;
+  }
