removed the margin in the projects slider pictures

--- a/css/style.css
+++ b/css/style.css
@@ -216,9 +216,14 @@ section {
   /* PROJECT */
   
   #project-slider .owl-next,
-  #project-slider .owl-next
+  #project-slider .owl-prev
   {
       background-color: rgba(255, 255, 255, 0.5) !important;
+  }
+
+   #project-slider .owl-next:hover,
+  #project-slider .owl-prev:hover{
+    background-color: #ff4d29 !important;
   }
 
   .project {
