containerized the image and the overlay

--- a/css/style.css
+++ b/css/style.css
@@ -273,3 +273,16 @@ section {
     position: relative;
     overflow: hidden;
   }
+
+  .team-member .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #c83417;
+  }
+
+  .team-member .content{
+    
+  }
