--- a/css/style.css
+++ b/css/style.css
@@ -281,11 +281,14 @@ section {
     width: 100%;
     height: 100%;
     background-color: rgba(255, 0, 0, 0.51);
+    transition: all 0.4s ease;
+    opacity: 0;
   }
 
   .team-member .social-links{
      position: absolute;
-     top: 50%;
+     top: 60%;
      left: 50%;
      transform: translate(-50%, -50%);
+     transition: all 0.4s ease;
   }
