--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ section {
 
   /* TEAM SECTION */
 
+  .team-member{
+    text-align: center;
+  }
+
   .team-member .img-wrapper{
     position: relative;
     overflow: hidden;
@@ -291,4 +295,19 @@ section {
      left: 50%;
      transform: translate(-50%, -50%);
      transition: all 0.4s ease;
+     opacity: 0;
   }
+
+  .team-member:hover .overlay{
+    opacity: 1;
+    top: 0;
+  }
+
+   .team-member:hover .social-links{
+     opacity: 1;
+     top: 50%;
+   }
+
+   .team-member h5{
+    margin-top: 24px;
+   }
