--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ section {
 
 .owl-prev:hover,
 .owl-next:hover {
-   background-color: #ff4d29 !important;
+  background-color: #ff4d29 !important;
 }
 
 /* ABOUT SECTION */
@@ -158,7 +158,6 @@ section {
 .info-box {
   display: flex;
   align-items: center;
-  
 }
 
 .intro {
@@ -176,20 +175,19 @@ section {
 }
 
 .info-box img {
-   width: 90px;
-   margin-right: 24px;
+  width: 90px;
+  margin-right: 24px;
 }
- 
 
 /* MILESTONE */
 #milestone {
-   background: linear-gradient(rgba(255, 77, 41, 0.9), rgba(255, 77, 41, 0.9)),
+  background: linear-gradient(rgba(255, 77, 41, 0.9), rgba(255, 77, 41, 0.9)),
     url(../img/bg_banner2.jpg);
 }
 
 #milestone .display-4,
-#milestone p{
-   color: #fff;
+#milestone p {
+  color: #fff;
 }
 
 #milestone .display-4 {
@@ -205,109 +203,128 @@ section {
 
 .service-box img {
   width: unset;
-  }
+}
 
-  .service-box h5{
-    margin-top: 24px;
-    margin-bottom: 12px;
-    
-  }
+.service-box h5 {
+  margin-top: 24px;
+  margin-bottom: 12px;
+}
 
-  /* PROJECT SECTION */
-  
-  #project-slider .owl-next,
-  #project-slider .owl-prev
-  {
-      background-color: rgba(255, 255, 255, 0.5) !important;
-  }
+/* PROJECT SECTION */
 
-   #project-slider .owl-next:hover,
-  #project-slider .owl-prev:hover{
-    background-color: #ff4d29 !important;
-  }
+#project-slider .owl-next,
+#project-slider .owl-prev {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+}
 
-  .project {
-    position: relative;
-  }
+#project-slider .owl-next:hover,
+#project-slider .owl-prev:hover {
+  background-color: #ff4d29 !important;
+}
 
-  .project .overlay {
-    background: linear-gradient(to bottom, rgba(9, 32, 50, 0.0),rgba(9, 32, 50, 0.8));
-    position: absolute;
-    width: 100%;
-    height: 240px;
-    bottom: 0;
-    left: 0;
-  }
+.project {
+  position: relative;
+}
 
-  .project .content {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    padding: 32px;
-  }
+.project .overlay {
+  background: linear-gradient(
+    to bottom,
+    rgba(9, 32, 50, 0),
+    rgba(9, 32, 50, 0.8)
+  );
+  position: absolute;
+  width: 100%;
+  height: 240px;
+  bottom: 0;
+  left: 0;
+}
 
-  .project h2,
-  .project h6 {
-    color: #fff;
-  }
+.project .content {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 32px;
+}
 
-  .project h6{
-     font-size: 14px;
-     text-transform: capitalize;
-  }
+.project h2,
+.project h6 {
+  color: #fff;
+}
 
-  .project h6::before {
-    content: '';
-    height: 2px;
-    width: 24px;
-    background-color: #ff4d29;
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 12px;
-  }
+.project h6 {
+  font-size: 14px;
+  text-transform: capitalize;
+}
 
-  /* TEAM SECTION */
+.project h6::before {
+  content: "";
+  height: 2px;
+  width: 24px;
+  background-color: #ff4d29;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 12px;
+}
 
-  .team-member{
-    text-align: center;
-  }
+/* TEAM SECTION */
 
-  .team-member .img-wrapper{
-    position: relative;
-    overflow: hidden;
-  }
+.team-member {
+  text-align: center;
+}
 
-  .team-member .overlay{
-    position: absolute;
-    top: -10%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 0, 0, 0.51);
-    transition: all 0.4s ease;
-    opacity: 0;
-  }
+.team-member .img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 
-  .team-member .social-links{
-     position: absolute;
-     top: 60%;
-     left: 50%;
-     transform: translate(-50%, -50%);
-     transition: all 0.4s ease;
-     opacity: 0;
-  }
+.team-member .overlay {
+  position: absolute;
+  top: -10%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, 0.51);
+  transition: all 0.4s ease;
+  opacity: 0;
+}
 
-  .team-member:hover .overlay{
-    opacity: 1;
-    top: 0;
-  }
+.team-member .social-links {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.4s ease;
+  opacity: 0;
+}
 
-   .team-member:hover .social-links{
-     opacity: 1;
-     top: 50%;
-   }
+.team-member:hover .overlay {
+  opacity: 1;
+  top: 0;
+}
 
-   .team-member h5{
-    margin-top: 24px;
-   }
+.team-member:hover .social-links {
+  opacity: 1;
+  top: 50%;
+}
+
+.team-member h5 {
+  margin-top: 24px;
+}
+
+/* REVIEWS SECTION */
+#reviews {
+  background: linear-gradient(rgba(9, 32, 50, 0.8), rgba(9, 32, 50, 0.8)),
+    url(../img/bg_banner1.jpg);
+}
+
+.review{
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.review img{
+  width: 85px !important;
+  border-radius: 100px;
+}
